# family-openclaw-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.openclaw  PLAN.md  README.md  TROUBLESHOOTING.md  compose.openclaw.yaml  compose.yaml  pyproject.toml
.openclaw/extensions/school-guardian-tools/: index.ts  openclaw.plugin.json  package.json
agents/agent-watch/: AGENTS.md
agents/family-orchestrator/: AGENTS.md
agents/school-guardian/: AGENTS.md  TOOLS.md
agents/school-guardian/skills/analyze-task-images/: SKILL.md
agents/school-guardian/skills/classroom-materials/: SKILL.md
alembic/: env.py
alembic/versions/: 20260408_000001_initial_schema.py  20260413_000002_material_extraction_cache.py
data/: classroom_fixture.json
memory/: 2026-04-08-0322.md  2026-04-08-0343.md  2026-04-08-0347.md  2026-04-08-0359.md  2026-04-08-0402.md  2026-04-08-400-api-version-not-supported.md
openclaw/: .env.example  openclaw.json.example  openclaw.json5.example
src/agent_watch/: __init__.py  categories.py  config.py  domain.py  formatting.py  jobs.py  model_scoring.py  page_chunk.py  scoring.py  store.py  summarizer.py  telegram.py  topics.py
src/agent_watch/sources/: __init__.py  rss_source.py  x_source.py
src/school_guardian/: __init__.py  __main__.py  classroom.py  cli.py  config.py  db.py  domain.py  export.py  focus.py  jobs.py  materials.py  services.py  store.py  telegram_bot.py  text_utils.py
tests/: test_agent_watch.py  test_app.py  test_classroom.py  test_export.py  test_materials.py  test_telegram.py  test_text_utils.py
(+7 files in other folders)
